aj-571 add record count